--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
 
+<link rel="stylesheet" href="style.css"
+
     <img id="cocacola" src="Coca-Cola_logo.svg.png" >
     <h1> Coca-Cola </h1>
     <h2> é uma empresa multinacional estadunidense, fabricante e comerciante de bebidas não-alcoólicas e concentrados de xaropes. É mais conhecida pelo seu produto Coca-Cola, inventado em 1886 pelo farmacêutico John Pemberton, em Columbus, Geórgia.
