--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<link rel="stylesheet" href="style.css"
+<link rel="stylesheet" href="style.css">
 
     <img id="cocacola" src="Coca-Cola_logo.svg.png" >
     <h1> Coca-Cola </h1>
