--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 
 
     <img id="cocacola" src="Coca-Cola_logo.svg.png" >
-    <h1> Coca-Cola </h1>
     <a href="https://www.coca-cola.com.br/">cocacola</a>
+
+    <h1> Coca-Cola </h1>
+
     <h2> é uma empresa multinacional estadunidense, fabricante e comerciante de bebidas não-alcoólicas e concentrados de xaropes. É mais conhecida pelo seu produto Coca-Cola, inventado em 1886 pelo farmacêutico John Pemberton, em Columbus, Geórgia.
 
 A fórmula da Coca-Cola e a marca foram compradas em 1889 por Asa Griggs Candler, que constituiu a empresa The Coca-Cola Company em 1892. Além da bebida homônima Coca-Cola, a Coca-Cola Company oferece atualmente mais de 500 marcas em cerca de 200 países e serve 2,1 bilhão de doses por dia. 
@@ -42,7 +44,7 @@ A promoção agressiva funcionou: a marca estava em todos os lugares ganhando po
 
 <h7> Produtos </h7>
 
-<h8> A Coca-Cola é uma gigante multinacional com mais de 600 marcas diferentes, ao redor do mundo. Confira agora algumas da submarcas, em que a marca é proprietária total ou parcial (aqui no Brasil), seja por criação interna ou aquisição: 
+<h8> <n> </n>A Coca-Cola é uma gigante multinacional com mais de 600 marcas diferentes, ao redor do mundo. Confira agora algumas da submarcas, em que a marca é proprietária total ou parcial (aqui no Brasil), seja por criação interna ou aquisição: 
  
     Fanta
     Aquarius
@@ -64,7 +66,7 @@ A promoção agressiva funcionou: a marca estava em todos os lugares ganhando po
     Como uma das marcas mais reconhecíveis do mundo, a Coca-Cola certamente conhece fatores fundamentais para atingir o marketing global de sucesso. 
      
     Com mais de um século, a marca continua sendo líder no setor, tanto em vendas quanto em marketing de produtos. A seguir, algumas das chaves para as estratégias:
-    
+</n>
 </h8>
 
 
