--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ A promoção agressiva funcionou: a marca estava em todos os lugares ganhando po
      
     Como uma das marcas mais reconhecíveis do mundo, a Coca-Cola certamente conhece fatores fundamentais para atingir o marketing global de sucesso. 
      
-    Com mais de um século, a marca continua sendo líder no setor, tanto em vendas quanto em marketing de produtos. A seguir, algumas das chaves para as estratégias:
+    Com mais de um século, a marca continua sendo líder no setor, tanto em vendas quanto em marketing de produtos.
 </n>
 </h8>
 
