--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ A promoção agressiva funcionou: a marca estava em todos os lugares ganhando po
 
 <h7> Produtos </h7>
 
-<h8> <n> </n>A Coca-Cola é uma gigante multinacional com mais de 600 marcas diferentes, ao redor do mundo. Confira agora algumas da submarcas, em que a marca é proprietária total ou parcial (aqui no Brasil), seja por criação interna ou aquisição: 
+<h8> <n> A Coca-Cola é uma gigante multinacional com mais de 600 marcas diferentes, ao redor do mundo. Confira agora algumas da submarcas, em que a marca é proprietária total ou parcial (aqui no Brasil), seja por criação interna ou aquisição: 
  
     Fanta
     Aquarius
