--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <img id="cocacola" src="Coca-Cola_logo.svg.png" >
 
-    <a href="https://www.coca-cola.com.br/">site da coca cola</a>
+    <a href="https://www.ferrari.com/en-BR">Site da Ferrari </a>
 
     <h1> <i> Ferrari </i> </h1>
 
