--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 
-    <img id="ferrari" src="ferrari.png" > 
+    <img id="ferrari" src="ferrrari.png" > 
 
     <a href="https://www.ferrari.com/en-BR">Site da Ferrari </a>
 
