--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <h2> É uma fabricante italiana de carros esportivos de luxo com sede em Maranello , Itália . Fundada em 1939 por Enzo Ferrari, Os carros da Ferrari são conhecidos como símbolos de sucesso, riqueza, velocidade, elegância, esportividade e prestígio. A empresa oferece atualmente uma ampla gama de modelos que inclui vários supercarros , grand tourers e um SUV . Muitas das primeiras Ferraris, datadas das décadas de 1950 e 1960, estão entre os carros mais caros já vendidos em leilão
 </h2>
 
+<img id="enzo" src="enzo ferrari.jpg"
+
 <h1> <i> A História da Ferrari  </i> </h1>
 <h2> Enzo Ferrari , ex-vendedor e piloto de corrida da Alfa Romeo , fundou a Scuderia Ferrari , uma equipe de corrida, em 1929. Originalmente destinada a atender cavalheiros e outros pilotos amadores, Em 1945, a Ferrari adotou seu nome atual. O trabalho começou prontamente em um novo motor V12 que alimentaria o 125 S , que foi o primeiro carro da marca, e muitas Ferraris subsequentes. A empresa obteve sucesso no automobilismo quase assim que começou a correr: o 125 S venceu muitas corridas em 1947, e várias vitórias iniciais, incluindo as 24 Horas de Le Mans de 1949 e a Carrera Panamericana de 1951 , ajudaram a construir a Ferrari reputação como uma montadora de alta qualidade. </h2>
 <h1> <i> A Venda da Ferrari para a Fiat  </i> </h1>
