--- a/index.html
+++ b/index.html
@@ -27,23 +27,23 @@
 
 <h2> Enzo Ferrari , ex-vendedor e piloto de corrida da Alfa Romeo , fundou a Scuderia Ferrari , uma equipe de corrida, em 1929. Originalmente destinada a atender cavalheiros e outros pilotos amadores, Em 1945, a Ferrari adotou seu nome atual. O trabalho começou prontamente em um novo motor V12 que alimentaria o 125 S , que foi o primeiro carro da marca, e muitas Ferraris subsequentes. A empresa obteve sucesso no automobilismo quase assim que começou a correr: o 125 S venceu muitas corridas em 1947, e várias vitórias iniciais, incluindo as 24 Horas de Le Mans de 1949 e a Carrera Panamericana de 1951 , ajudaram a construir a Ferrari reputação como uma montadora de alta qualidade. </h2>
 
-<img id="enzo" src="enzo ferrari.jpg"
+<img id="enzo" src="enzo ferrari.jpg">
 
 <h1> <i> A Venda da Ferrari para a Fiat  </i> </h1>
 
 <h2> No dia 21 de julho de 1969, a Fiat comprou 50% do capital da Ferrari, depois de um longo processo de dúvidas quanto ao futuro da marca de Maranello. Nos anos 1960, a péssima situação econômica da Europa potencializou as dificuldades de muitos pequenos fabricantes, e a Ferrari não foi excepção.
 </h2>
 
-<img id="fiat" src="ferrari fiat.webp"
+<img id="fiat" src="ferrari fiat.webp" > 
 
-<h1> Ferrari no Automobilismo </h1>
+<h1>  Ferrari no Automobilismo </h1> 
 
 <h2> A entidade mais antiga da Ferrari, a Scuderia Ferrari , foi criada em 1929 - dez anos antes da fundação da Ferrari propriamente dita - como uma equipe de corrida de Grande Prêmio . Eles eram afiliados à montadora Alfa Romeo , para quem Enzo havia trabalhado na década de 1920. A Alfa Romeo forneceu carros de corrida para a Ferrari, que a equipe então afinou e ajustou de acordo com as especificações desejadas. A Scuderia Ferrari teve muito sucesso na década de 1930: entre 1929 e 1937, eles colocaram em campo pilotos de ponta como Antonio Ascari , Giuseppe Campari e Tazio Nuvolari , e venceram 144 de suas 225 corridas
     A primeira vitória da Ferrari em uma série de F1 foi no Grande Prêmio da Inglaterra de 1951 , anunciando seu forte desempenho durante os anos 1950 e início dos anos 1960: entre 1952 e 1964, a equipe levou para casa seis Campeonatos Mundiais de Pilotos e um Campeonato de Construtores. A Ferrari começou a cair no final dos anos 1960, quando foi superada por equipes que usavam o barato e bem projetado motor Cosworth DFV .O desempenho da equipe melhorou acentuadamente em meados da década de 1970 graças a Niki Lauda , cuja habilidade ao volante garantiu à Ferrari um título de pilotos em 1975 e 1977; sucesso semelhante foi alcançado nos anos seguintes por nomes como Jody Scheckter e Gilles Villeneuve
     Após outra seca nas décadas de 1980 e 1990, a Ferrari teve uma longa seqüência de vitórias na década de 2000, em grande parte por meio do trabalho de Michael Schumacher . Depois de assinar com a equipe em 1996, Schumacher deu à Ferrari cinco títulos consecutivos de pilotos entre 2000 e 2004; isso foi acompanhado por seis títulos consecutivos de construtores, começando em 1999. A Ferrari foi especialmente dominante na temporada de 2004 , onde perdeu apenas três corridas. Atualmente ela continua sendo uma das forças na F1 conseguindo vices e grandes vitórias com seus pilotos
 </h2>
 
-<img id="monaco" src="ferrari monaco.jpg"
+<img id="monaco" src="ferrari monaco.jpg">
 
 <h1> Ferrari em Le Mans </h1>
 
@@ -52,9 +52,9 @@
     Após essa fase encantada da Ferrari em Le Mans, ela começou a desenvolver outros projetos oque deixaram ela 50 anos sem tentar ganhar na classe geral em Le mans, mais em 2023 isso mudou, a Ferrari fez seu incrivel hypercar para o campeonato do WEC desse ano, e adivinha, venceram Le Mans de um jeito incrivel, sendo a unica que durou sendo um dos carros com mais durabilidade, e não foi uma vitória pequena, mais em 2023 Le Mans fez seu centenario, 100 anos da primeira corrida lá
 </h2>
 
-<img id="le mans " src="ferrari le mans.jpg"
+<img id="le mans " src="ferrari le mans.jpg" >
 
-<img id="le mans 2" src="ferrari le mans 2.jpg"
+<img id="le mans 2" src="ferrari le mans 2.jpg" >
 
 
 
