--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <h2> Enzo Ferrari , ex-vendedor e piloto de corrida da Alfa Romeo , fundou a Scuderia Ferrari , uma equipe de corrida, em 1929. Originalmente destinada a atender cavalheiros e outros pilotos amadores, Em 1945, a Ferrari adotou seu nome atual. O trabalho começou prontamente em um novo motor V12 que alimentaria o 125 S , que foi o primeiro carro da marca, e muitas Ferraris subsequentes. A empresa obteve sucesso no automobilismo quase assim que começou a correr: o 125 S venceu muitas corridas em 1947, e várias vitórias iniciais, incluindo as 24 Horas de Le Mans de 1949 e a Carrera Panamericana de 1951 , ajudaram a construir a Ferrari reputação como uma montadora de alta qualidade. </h2>
 
-<img id="enzo" src="enzo ferrari.jpg">
+<img id="en" src="enzo ferrari.jpg">
 
 <h1> <i> A Venda da Ferrari para a Fiat  </i> </h1>
 
